# njnr

./: .gitignore  Language_Grammar.md  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  data.h  main.c  njnr.l  njnr.y  symtab.c  symtab.h
.github/workflows/: c-cpp.yml  c-cpp_win.yml
include/: compiler.hpp  constant.hpp  cpptypes.hpp  data.hpp  helper.hpp  list.hpp  operator.hpp  symtab.hpp  trans.hpp  type.hpp
include/common/: symbol_table.hpp  symbol_table_entry.hpp  symbol_table_stack.hpp  symbol_table_stackX.hpp  symbol_table_stack_templates.h  symbol_table_templates.h
src/: CodeGenerator.cpp  Constant.cpp  FunctionBinding.cpp  FunctionHeader.cpp  Identifier.cpp  IdentifierListNode.cpp  List.cpp  ListNode.cpp  Makefile.am  Makefile.in  ParameterBinding.cpp  ReturnPacket.cpp  Statement.cpp  TranslationUnit.cpp  VariableBinding.cpp  command.cpp  compiler_core.cpp  cpptypes.cpp  debug.cpp  getopt.cpp  helper.cpp  lex.cpp  list.cpp  main.cpp  njnr.l  njnr.y  njnr.ypp  njnrLexer.cpp  operator.cpp  parser_functions.cpp  symtab.cpp  trans.cpp
src/common/: symbol_table.cpp  symbol_table_entry.cpp  symbol_table_stack.cpp  symbol_table_stackX.cpp
src/expressions/: expressions.cpp
src/functions/: function_calls.cpp  functions.cpp
src/include/: .in  BaseData.hpp  BasicListNode.hpp  CodeGenerator.hpp  Compiler.hpp  Constant.hpp  FunctionBinding.hpp  FunctionHeader.hpp  Identifier.hpp  IdentifierListNode.hpp  List.hpp  ListNode.hpp  Operator.hpp  ParameterBinding.hpp  ParameterListNode.hpp  ReturnPacket.hpp  ReturnPacketListNode.hpp  Statement.hpp  StatementListNode.hpp  TSAbstractType.hpp  TSConstantType.hpp  TSOperatorType.hpp  TSType.hpp  TranslationUnit.hpp  TranslationUnitListNode.hpp  TypeListNode.hpp  VariableBinding.hpp  compiler.hpp  config.h  constant.hpp  cpptypes.hpp  data.hpp  debug.hpp  helper.hpp  lex.hpp  list.hpp  njnrLexer.hpp  operator.hpp  trans.hpp  type.hpp
src/include/common/: symbol_table.hpp  symbol_table_entry.hpp  symbol_table_stack.hpp  symbol_table_stackX.hpp  symbol_table_stack_templates.h  symbol_table_templates.h
src/statements/: statements.cpp
test/: test.n  test2.n
